# ai-meeting-saas

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  convert.py  docker-compose.yml  index.html  llm.py  main.py  pyproject.toml  view.html
.github/workflows/: deploy-worker.yml
backend/: .gitignore  Dockerfile  package.json
backend/src/: app.module.ts  main.ts
backend/src/analytics/: analytics.controller.ts  analytics.module.ts
browser-extension/: manifest.json
browser-extension/html/: offscreen.html  popup.html
browser-extension/js/: background.js  content.js  offscreen.js  popup.js
docs/: implementation.md  shadcn-docs.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-logo.tsx  app-sidebar.tsx  meeting-card.tsx  meeting-detail-sheet.tsx  meeting-table.tsx  nav-user.tsx  query-provider.tsx
frontend/hooks/: use-theme.tsx
services/: ai_analyzer.py  audio_transcriber.py
templates/: index.html  view_analysis.html
uploads/: 20251019_122838_recording.webm
worker/: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml
worker/core/: __init__.py  celery.py  config.py  storage.py  tasks.py
worker/services/: __init__.py  ai_analyzer.py
worker/services/ai_analysis/: __init__.py  controller.py  tasks.py
worker/services/transcription/: __init__.py  controller.py  tasks.py
worker/shared/: __init__.py  base_service.py  config.py  message_queue_adapter.py  minio_client.py
worker/templates/: index.html
(+43 files in other folders)
