[project]
name = "meetbuddy"
version = "0.1.0"

description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "google-genai>=1.45.0",
    "json-repair>=0.52.1",
    "pyannote-audio==3.4.0",
    "python-ffmpeg>=2.0.12",
    "pywhispercpp>=1.3.3",
    "rich>=14.2.0",
    "torchaudio==2.8.0",
    "torchcodec>=0.8.0",
    "webvtt-py>=0.5.1",
    "whisperx>=3.7.4",
]
